add forest/mil clustering